# yoyoeditor

./: .gitignore  CMakeLists.txt  README.md  RELEASE_CHECKLIST.md  TODO.md  build_linux.sh  dev_build.sh
.github/workflows/: compile-tests.yml
editor_resources/: icon.rc
include/: editor.h  editor_build.h  editor_defs.h  editor_file_picker.h  editor_fs_ops.h  editor_input.h  editor_panels.h  editor_project_management.h  editor_selection.h  editor_serialize.h  editor_settings_ui.h  editor_ui.h  editor_utils.h
src/: editor.c  editor_build.c  editor_defs.c  editor_file_picker.c  editor_fs_ops.c  editor_input.c  editor_project_management.c  editor_selection.c  editor_serialize.c  editor_utils.c
src/ui/: editor_inspector.c  editor_settings_ui.c  editor_ui.c
src/ui/panels/: editor_panel_credits.c  editor_panel_keybinds.c  editor_panel_loading.c  editor_panel_scene_settings.c  editor_panel_styles.c  editor_panel_tricks.c  editor_panel_welcome.c
